@@ -1,3 +1,8 @@
+Wed Jun 19 23:32:23 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (RVALUE_PROMOTED): check consistency between oldgen flag and
+	  oldgen bitmap if RGENGC_CHECK_MODE > 0.
+
 Wed Jun 19 23:29:29 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (rb_gc_force_recycle): clear oldgen bitmap, too.
